--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -6,8 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".TaskDetail">
 
+
+
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/taskTitle"
         android:layout_width="120dp"
         android:layout_height="80dp"
         android:layout_marginStart="60dp"
@@ -18,15 +20,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/taskBody"
         android:layout_width="348dp"
         android:layout_height="100dp"
         android:text="@string/lorem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
         app:layout_constraintVertical_bias="0.192"
         tools:ignore="HardcodedText" />
+
+
+    <TextView
+        android:id="@+id/taskState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="212dp"
+        android:text="@string/task_detail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
