--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listTask1"
+        android:id="@+id/listTask"
         android:layout_width="350dp"
         android:layout_height="350dp"
         android:layout_marginStart="10dp"
