--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="110dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/name"
+       android:hint="@string/name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView2"
